noinst_LTLIBRARIES = libvicar.la

libvicar_la_SOURCES = XvicBasicImage.c XvicCopyRaw.c XvicImage.c \
	XvicImageOverlay.c XvicRegion.c XvicStringCursor.c \
	XvicBasicImage.h XvicBasicImageP.h XvicCopyRaw_bw.h \
	XvicCopyRawCall_zoom.h  XvicCopyRaw_color.h XvicCopyRawFn_1band.h \
	XvicCopyRawFn_3band.h XvicCopyRawFn_zoom.h XvicCopyRaw_name.h \
	XvicImage.h XvicImageOverlay.h XvicImageOverlayP.h XvicImageP.h \
	XvicRegion.h
